fixed footer spacing a bit

--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -6,7 +6,6 @@ footer {
     justify-content: center;
 
     width: 100%;
-    margin-top: 24px;
     padding: 12px 0;
 
     text-align: center;
